--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "prepare": "ncc build index.js -o dist --source-map"
   },
   "dependencies": {
-    "child_process": "^1.0.2",
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "aws-sdk": "^2.1070.0",
+    "fs": "^0.0.1-security",
+    "mime-types": "^2.1.34",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1"
